--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["JunKim10 <<>>"]
 python = "^3.8"
 requests = "^2.26.0"
 beautifulsoup4 = "^4.10.0"
+Flask = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 
